--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -1,8 +1,7 @@
 name: Deploy to cPanel
+
 on:
-   push:
-      branches:
-         - main
+   workflow_dispatch:
 
 jobs:
    build-and-deploy:
@@ -25,7 +24,7 @@ jobs:
            uses: SamKirkland/FTP-Deploy-Action@4.3.3
            with:
               server: ${{ secrets.FTP_SERVER }}
-              username: ${{ secrets.FTP_USERNAME}}
+              username: ${{ secrets.FTP_USERNAME }}
               password: ${{ secrets.FTP_PASSWORD }}
               local-dir: ./out/
               server-dir: /
