--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_rewrite.c>
   RewriteEngine On
-  RewriteBase /cop29/
+  RewriteBase /
 
   # If the request is not for a valid directory
   RewriteCond %{REQUEST_FILENAME} !-d
