--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,7 @@ name: Deploy to cPanel
 on:
    push:
       branches:
-         - develop
-
+         - last-version
 jobs:
    build-and-deploy:
       runs-on: ubuntu-latest
