--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,27 @@
-name: Deploy to cPanel
+name: FTP Deploy
+
 on:
    push:
       branches:
          - last-version
+
 jobs:
-   build-and-deploy:
+   deploy:
       runs-on: ubuntu-latest
       steps:
-         - uses: actions/checkout@v2
-
-         - name: Setup Node.js
-           uses: actions/setup-node@v2
-           with:
-              node-version: '20'
+         - name: Checkout code
+           uses: actions/checkout@v3
 
          - name: Install dependencies
-           run: npm ci
+           run: npm install
 
-         - name: Build project
+         - name: Build Project
            run: npm run build
 
-         - name: Deploy to cPanel
-           uses: SamKirkland/FTP-Deploy-Action@4.3.3
+         - name: FTP Deploy
+           uses: SamKirkland/FTP-Deploy-Action@4.0.0
            with:
               server: ${{ secrets.FTP_SERVER }}
-              username: ${{ secrets.FTP_USERNAME}}
+              username: ${{ secrets.FTP_USERNAME }}
               password: ${{ secrets.FTP_PASSWORD }}
-              local-dir: ./out/
-              server-dir: /
+              local-dir: ./build
