--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.163.0",
     "three-globe": "^2.31.0",
-    "vercel": "^32.3.0"
+    "vercel": "^28.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
