--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       "**/*.ts",
       "**/*.tsx",
       ".next/types/**/*.ts",
-      "next.config.mjs"
+      "next.config.mjs",
+      "next-sitemap.config.js"
    ],
    "exclude": ["node_modules"]
 }
